Implement Main Menu with working One-Player feature

--- a/PingPongGame/PingPongGame.html
+++ b/PingPongGame/PingPongGame.html
@@ -1,6 +1,5 @@
 <html>
-<title>Ping Pong</title>
-<header><b>Ping Pong Game</b></header>
+<title>Ping Pong Game</title>
 
 <canvas id='gameCanvas' width='800' height='600'></canvas>
 
